--- a/css/post.css
+++ b/css/post.css
@@ -89,7 +89,7 @@ figcaption {
   }
 
   li {
-    margin: 0 0 var(--spacing-xs);
+    margin: 0 0 var(--spacing-sm);
   }
 
   p code {
@@ -101,7 +101,7 @@ figcaption {
   h4 {
     color: var(--color-text-primary);
     font-weight: 600;
-    margin: var(--spacing-3xl) 0 var(--spacing-md);
+    margin: var(--spacing-2xl) 0 var(--spacing-md);
     text-wrap: pretty;
   }
 
@@ -122,9 +122,9 @@ figcaption {
 
   pre {
     font-size: 0.875rem;
-    margin: 0 0 var(--spacing-3xl);
+    margin: 0 0 var(--spacing-xl);
     overflow: auto;
-    padding: var(--spacing-xs);
+    padding: var(--spacing-sm);
   }
 
   img {
@@ -213,14 +213,25 @@ figure {
 
 @media (width >= 600px) {
   .post-header {
-    padding: var(--spacing-3xl) 0 0;
-    margin: 0 0 var(--spacing-3xl);
+    padding: var(--spacing-xl) 0 0;
+    margin: 0 0 var(--spacing-xl);
   }
 }
 
 @media (width >= 1024px) {
+  .post-header {
+    padding: var(--spacing-2xl) 0 0;
+    margin: 0 0 var(--spacing-2xl);
+  }
+
   .post-content {
     font-size: 1.125rem;
+
+    p,
+    ol,
+    ul {
+      margin-bottom: var(--spacing-lg);
+    }
 
     p {
       code {
@@ -228,8 +239,15 @@ figure {
       }
     }
 
+    h2,
+    h3,
+    h4 {
+      margin-top: var(--spacing-3xl);
+    }
+
     pre {
       padding: var(--spacing-md);
+      margin-bottom: var(--spacing-2xl);
     }
 
     h2 {
